--- a/neural/requirements.txt
+++ b/neural/requirements.txt
@@ -4,5 +4,8 @@ requests===2.31.0
 pytest===7.4.2
 sentence-transformers===2.2.2
 accelerate==0.21.0
-torch==2.1.1
+torch==2.1.2
 bitsandbytes==0.41.3.post2
+protobuf==4.25.1
+vllm==0.2.7
+
