--- a/frontend/extension/package.json
+++ b/frontend/extension/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "textdata-extension",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,14 +12,17 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@uiw/react-md-editor": "^3.20.5",
     "axios": "^1.1.3",
     "form-data": "^4.0.0",
+    "katex": "^0.16.9",
     "react": "^18.2.0",
     "react-chrome-extension-router": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-window": "^1.8.8",
+    "rehype-sanitize": "^6.0.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.0"
   },
@@ -46,5 +49,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4"
   }
 }
