--- a/frontend/website/package.json
+++ b/frontend/website/package.json
@@ -17,6 +17,9 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@uiw/react-md-editor": "^3.20.5",
     "bootstrap": "^5.2.3",
+    "d3": "^7.8.5",
+    "d3-force": "^3.0.0",
+    "dat.gui": "^0.7.9",
     "js-cookie": "^3.0.1",
     "katex": "^0.16.4",
     "next": "^12.3.4",
@@ -24,16 +27,14 @@
     "next-themes": "^0.2.1",
     "react-bootstrap": "^2.7.2",
     "react-client-session": "0.0.8",
+    "react-force-graph-2d": "^1.23.1",
+    "react-force-graph-3d": "^1.23.1",
     "react-infinite-scroll-component": "^6.1.0",
     "rehype-sanitize": "^5.0.1",
     "save": "^2.5.0",
-    "react-force-graph-3d": "^1.23.1",
     "three": "^0.156.1",
     "three-spritetext": "^1.8.1",
-    "react-force-graph-2d": "^1.23.1",
-    "dat.gui": "^0.7.9",
-    "d3": "^7.8.5",
-    "d3-force": "^3.0.0"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
